# cmake-simple-library-bootstrap

./: build.bat
binary/: CMakeLists.txt  build.bat
binary/src/: main.cpp
